Fixed styling issues with animations+scrollbars (#201)
* Fixed styling issues with animations+scrollbars

* Added coverage to .gitignore

* Fixed Codacy errors

--- a/source/client/assets/styles/upload.css
+++ b/source/client/assets/styles/upload.css
@@ -38,5 +38,7 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 35px;
+  gap: 35px;
   animation: zoom 0.5s;
 }
